update display menu

--- a/tp4/pokepedia/index.html
+++ b/tp4/pokepedia/index.html
@@ -11,6 +11,7 @@
     <h1>Poképédia</h1>
     <p>L'encyclopédie Pokémon fait par une personne d'exception, pour une personne d'exception</p>
 </header>
+<div id="menu-fictif"></div>
 <nav>
     <div class="acceuil" id="acceuil">
         <a href="index.html">Accueil</a>
