--- a/tp4/pokepedia/pokemon.html
+++ b/tp4/pokepedia/pokemon.html
@@ -10,6 +10,7 @@
 <header>
     <h1>Bulbizarre</h1>
 </header>
+<div id="menu-fictif"></div>
 <nav>
     <div class="acceuil" id="acceuil">
         <a href="index.html">Accueil</a>
