All pokemon in one page

--- a/tp4/pokepedia/index.html
+++ b/tp4/pokepedia/index.html
@@ -14,7 +14,7 @@
 <div id="menu-fictif"></div>
 <nav>
     <div class="acceuil" id="acceuil">
-        <a href="index.html">Accueil</a>
+        <a href="#">Accueil</a>
     </div><!--
     --><div class="menuItem" id="pokemons">
         Pokemons
