--- a/tp4/pokepedia/index.html
+++ b/tp4/pokepedia/index.html
@@ -11,6 +11,12 @@
     <h1>Poképédia</h1>
     <p>L'encyclopédie Pokémon fait par une personne d'exception, pour une personne d'exception</p>
 </header>
+<div id="search">
+    <div>
+        <input id="input-search" name="search" type="text">
+        <button id="button-search">Go</button>
+    </div>
+</div>
 <div id="menu-fictif"></div>
 <nav>
     <div class="acceuil" id="acceuil">
@@ -20,6 +26,7 @@
         Pokemons
     </div>
 </nav>
+
 <section id="tabArticles">
 </section>
 <section id="pokemon-articles">
