add comparation search (<, <=, >, >=)

--- a/tp4/pokepedia/index.html
+++ b/tp4/pokepedia/index.html
@@ -16,6 +16,19 @@
         <input id="input-search" name="search" type="text">
         <button id="button-search">Go</button>
     </div>
+    <div class='popover' id="help">
+        <p>Exemple de recherche :
+        <ul>
+            <li>un mot / une phrase</li>
+            <li>par caractéristique :</li>
+            <ul>
+                <li>talent = brasier</li>
+                <li>poids < 100.0</li>
+                <li>taille >= 1.10</li>
+            </ul>
+        </ul>
+        </p>
+    </div>
 </div>
 <div id="menu-fictif"></div>
 <nav>
